--- a/templates/index.html
+++ b/templates/index.html
@@ -32,31 +32,17 @@
       </nav>
       <div class="container-fluid" style="margin-bottom: 20rem;">
          <div class="row">
-            <div class="col-md-6" style="margin: 5rem auto 0 auto;">
-               {% if error %}
-               <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                  <strong>Error</strong>
-                  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-               </div>
-               {% endif %}
-               {% if result %}
-               <div class="alert alert-success alert-dismissible fade show" role="alert">
-                  <strong>{{q}} = {{ans}}</strong>
-                  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-               </div>
-               {% endif %}
-            </div>
-         </div>
-         <div class="row">
             <div class="col-md-6" style="margin: 1rem auto 0 auto;">
                <img src="{% static 'logo.jpg' %}" alt="" class="img-fluid" style="width: 100%; ">
                <div class="card">
                   <div class="card-body">
-                     <form action="" method="GET">
-                        <div class="form-group">
-                           <input type="search" class="form-control" name="query" id="query">
-                        </div>
-                        <br>
+                     <form action="{% url 'getquery' %}" method="GET">
+                        <input list="languages" class="form-control" style="margin-bottom: 1rem;" name="languages">
+                        <datalist id="languages">
+                           {% for eachlanguage in lang %}
+                           <option value="{{eachlanguage}}">
+                           {% endfor %}
+                        </datalist>
                         <div class="row">
                            <div class="col-md-6">
                               <input type="submit" class="btn btn-success" style="display: block; margin: 0 auto;">
@@ -73,7 +59,7 @@
          </div>
          <div class="row">
             <div class="col-md-6" style="margin: 1rem auto 0 auto;">
-               <p class="display-4" id="about" name="about" style="text-align: center;">
+               <p class="badge bg-success" id="about" name="about" style="text-align: center; display: block; font-size: 2rem;">
                   About
                </p>
                <hr>
@@ -84,11 +70,13 @@
          </div>
          <div class="row">
             <div class="col-md-6" style="margin: 1rem auto 0 auto;">
-               <p class="display-4" id="instructions" name="instructions" style="text-align: center;">
-                  Select Your Language And See Results
+               <p class="badge bg-danger" id="instructions" name="instructions" style="text-align: center; display: block; font-size: 2rem;">
+                  Instruction
                </p>
                <hr>
-              
+               <p class="lead" style="text-align: center;">
+                  Select Your Language And See Results
+               </p>
             </div>
          </div>
       </div>
