count votes and added progressbar

--- a/templates/index.html
+++ b/templates/index.html
@@ -82,30 +82,24 @@
                   <table class="table">
                      <thead>
                         <tr>
-                           <th scope="col">#</th>
-                           <th scope="col">First</th>
-                           <th scope="col">Last</th>
-                           <th scope="col">Handle</th>
+                           <th scope="col">Id</th>
+                           <th scope="col">Language</th>
+                           <th scope="col">Votes</th>
                         </tr>
                      </thead>
                      <tbody>
+                        {% for key,value in globalcnt.items %}
                         <tr>
-                           <th scope="row">1</th>
-                           <td>Mark</td>
-                           <td>Otto</td>
-                           <td>@mdo</td>
+                           <td>{{forloop.counter}}</td>
+                           <td>{{key}}</td>
+                           <td>
+                              <div class="progress">
+                                 <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: {{value}}%">{{value}}
+                                 </div>
+                              </div>
+                           </td>
                         </tr>
-                        <tr>
-                           <th scope="row">2</th>
-                           <td>Jacob</td>
-                           <td>Thornton</td>
-                           <td>@fat</td>
-                        </tr>
-                        <tr>
-                           <th scope="row">3</th>
-                           <td colspan="2">Larry the Bird</td>
-                           <td>@twitter</td>
-                        </tr>
+                        {% endfor %}
                      </tbody>
                   </table>
                </div>
